--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     compile 'com.google.apis:google-api-services-drive:v3-rev110-1.23.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '0.9.26'
     testImplementation  'junit:junit:4.12'
 }
 
